Update Vercel build command and project graph metadata
- Changed the build command in vercel.json from a bash script to an npm script for improved consistency.
- Updated the project graph hash in file-map.json to reflect changes in vercel.json.
- Adjusted the computed timestamp in project-graph.json to ensure accurate tracking of modifications.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "bash .vercel-build.sh",
+  "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist/apps/potta",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps"
