--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run vercel-build",
+  "buildCommand": "nx run potta:build",
   "outputDirectory": "dist/apps/potta",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps"
