--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
-  "buildCommand": "nx run potta:build && (cp dist/apps/potta/.next/routes-manifest.json dist/apps/potta/routes-manifest.json || true)",
-  "outputDirectory": "dist/apps/potta",
+  "buildCommand": "nx run potta:build",
+  "outputDirectory": "dist/apps/potta/.next",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps"
 }
