--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "buildCommand": "nx run potta:build",
-  "outputDirectory": "dist/apps/potta",
+  "outputDirectory": "dist/apps/potta/.next",
   "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps"
 }
