--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,5 @@
 {
-  "buildCommand": "nx run potta:build",
-  "outputDirectory": "dist/apps/potta/.next",
-  "framework": "nextjs",
+  "buildCommand": "npm run vercel-build",
+  "outputDirectory": "dist/apps/potta",
   "installCommand": "npm install --legacy-peer-deps"
 }
