--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "npm run vercel-build",
   "outputDirectory": "dist/apps/potta",
+  "framework": "nextjs",
   "installCommand": "npm install --legacy-peer-deps"
 }
